tests/more_path/more_path.exp
Error ---------------------------------------------------------------------------------------------------- Sigma.js:10:7

Cannot call `x.c` because property `c` is missing in `B` [1]. [prop-missing]

   Sigma.js:10:7
   10|     x.c(); // error
             ^

References:
   Sigma.js:7:16
    7| function bar(x:B) {
                      ^ [1]


Error ---------------------------------------------------------------------------------------------------- Sigma.js:21:7

Cannot call `x.d` because property `d` is missing in `C` [1]. [prop-missing]

   Sigma.js:21:7
   21|     x.d(); // error
             ^

References:
   Sigma.js:5:7
    5| class C extends B { c() {} }
             ^ [1]


Error ---------------------------------------------------------------------------------------------------- Sigma.js:24:7

Cannot call `x.c` because property `c` is missing in `A` [1]. [prop-missing]

   Sigma.js:24:7
   24|     x.c(); // error
             ^

References:
   Sigma.js:16:16
   16| function foo(x:A) {
                      ^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:11:16

Cannot get `obj.childProp_TYPO` because property `childProp_TYPO` is missing in `ChildClass` [1]. [prop-missing]

   test.js:11:16
   11|     return obj.childProp_TYPO; // error (obj: ChildClass)
                      ^^^^^^^^^^^^^^

References:
   test.js:5:7
    5| class ChildClass extends BaseClass {
             ^^^^^^^^^^ [1]



Found 4 errors
